# openai-function-calling

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: set-status.yml  test-application.yml
examples/: weather_functions.py  weather_functions_infer.py
openai_function_calling/: __init__.py  function.py  function_inferer.py  function_inferrer.py  helper_functions.py  json_schema_type.py  parameter.py  tool_helpers.py
tests/: __init__.py  test_function.py  test_function_inferer.py  test_helper_functions.py  test_parameter.py  test_tool_helpers.py
