[tool.poetry]
name = "openai-function-calling"
version = "2.1.1"
description = "Helper functions to generate OpenAI GPT function calling requests."
authors = ["Jake Cyr <cyrjake@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jakecyr/openai-function-calling"
packages = [{ include = "openai_function_calling" }]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
typing-extensions = "^4.7.1"
docstring-parser = "^0.15"

[tool.poetry.group.dev.dependencies]
openai = "^1.3.2"
pytest = "^7.4.3"
ruff = "0.3.4"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
