[tool.poetry]
name = "openai-function-calling"
version = "2.5.0"
description = "Helper functions to generate OpenAI GPT function calling requests."
authors = ["Jake Cyr <cyrjake@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jakecyr/openai-function-calling"
packages = [{ include = "openai_function_calling" }]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
typing-extensions = "^4.12.2"
docstring-parser = "^0.16"

[tool.poetry.group.dev.dependencies]
openai = "^1.3.2"
pytest = "^8.3.5"
ruff = "0.9.9"
coverage = "^7.6.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
